cấu hình cơ bản tương đối hoàng thành

--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <p>helloword with node.js</p>
+    <p>helloword with node.js cho hai</p>
+    <img src="/image/anh1.jpg" alt="ảnh này đầy kỉ niệm" class="hoidanit" />
   </body>
 </html>
