--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -7,7 +7,22 @@
   </head>
   <body>
     <div id="main">
-      <div id="header"></div>
+      <div id="header">
+        <ul id="nav">
+          <li><a href="">Home</a></li>
+          <li><a href="">Band</a></li>
+          <li><a href="">Tour</a></li>
+          <li><a href="">View</a></li>
+          <li>
+            <a href="">Contact</a>
+            <ul class="subnav">
+              <li><a href="">Java</a></li>
+              <li><a href="">C#</a></li>
+              <li><a href="">Python</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
       <div id="slider"></div>
       <div id="content"></div>
       <div id="footer"></div>
