--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,31 +1,36 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/Home.css" />
-  </head>
-  <body>
-    <div id="main">
-      <div id="header">
-        <ul id="nav">
-          <li><a href="">Home</a></li>
-          <li><a href="">Band</a></li>
-          <li><a href="">Tour</a></li>
-          <li><a href="">View</a></li>
-          <li>
-            <a href="">Contact</a>
-            <ul class="subnav">
-              <li><a href="">Java</a></li>
-              <li><a href="">C#</a></li>
-              <li><a href="">Python</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-      <div id="slider"></div>
-      <div id="content"></div>
-      <div id="footer"></div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="/css/Home.css" />
+</head>
+
+<body>
+  <div id="main">
+    <div id="header">
+      <ul id="nav">
+        <li><a href="">Home</a></li>
+        <li><a href="">Band</a></li>
+        <li><a href="">Tour</a></li>
+        <li><a href="">View</a></li>
+        <li>
+          <a href="">Contact</a>
+          <ul class="subnav">
+            <li><a href="">Java</a></li>
+            <li><a href="">C#</a></li>
+            <li><a href="">Python</a></li>
+          </ul>
+        </li>
+      </ul>
     </div>
-  </body>
+    <div id="slider"></div>
+    <div id="content">
+
+    </div>
+    <div id="footer"></div>
+  </div>
+</body>
+
 </html>
